--- a/.github/power.folder/power1.css
+++ b/.github/power.folder/power1.css
@@ -4,10 +4,29 @@
     width: 50%;
     border-radius: 10px;
     background-color: rgb(255, 100, 0);
-    margin-left: 50px;
-    margin-top: 50px;
+    margin-left: 446px;
+    margin-top: 100px;
 }
 
 #animate
 {
+    animation: pluse 0.1s infinite;
+}
+
+@keyframes pluse
+{
+    0%
+    {
+        transform: scale(2);
+    }
+
+    50%
+    {
+        transform: scale(1);
+    }
+
+    100%
+    {
+        transform: scale(2);
+    }
 }
