--- a/.github/power.folder/power1.css
+++ b/.github/power.folder/power1.css
@@ -1,28 +1,8 @@
 .power-1
 {
-    height: 100px;
-    width: 50%;
-    border-radius: 10px;
-    background-color: rgb(255, 100, 0);
-    margin-left: 446px;
+    height: 500px;
+    width: 90%;
+    margin: auto;
     margin-top: 100px;
-    animation: pluse 50s infinite;
-}
-
-@keyframes pluse
-{
-    0%
-    {
-        transform: scale(2);
-    }
-
-    50%
-    {
-        transform: scale(1);
-    }
-
-    100%
-    {
-        transform: scale(2);
-    }
+    background-color: rgb(50, 50, 50);
 }
