flex tape but stronger

--- a/.github/power.folder/power2.css
+++ b/.github/power.folder/power2.css
@@ -8,9 +8,16 @@
     display: flex;
 }
 
-#power2
+#power1
 {
     animation: pulse 0.4s infinite;
+}
+
+#power2
+{
+    min-height: 20vh;
+    align-items: stretch;
+    justify-content: space-between;
 }
 
 @keyframes pulse
