--- a/.github/power.folder/power1.css
+++ b/.github/power.folder/power1.css
@@ -5,4 +5,6 @@
     margin: auto;
     margin-top: 100px;
     background-color: rgb(50, 50, 50);
+    justify-content: center;
+    flex-wrap: wrap;
 }
