--- a/.github/power.folder/power2.css
+++ b/.github/power.folder/power2.css
@@ -1,26 +1,41 @@
 .power-2
 {
     height: 80px;
-    width: 50%;
     border-radius: 10px;
     background-color: rgb(255, 100, 0);
     margin: auto;
     display: flex;
 }
 
-#power1
+#power2-1
 {
-    animation: pulse 0.4s infinite;
+    width: 50%;
+    !animation: pulse1 1s infinite;
 }
 
-#power2
+#power2-2
 {
     min-height: 20vh;
     align-items: stretch;
     justify-content: space-between;
+    max-width: 10%;
+    padding: 4em;
+    !animation: pulse2 1s infinite;
 }
 
-@keyframes pulse
+#power2-3
+{
+    width: 20%;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 40vh;
+    padding: 2em;
+    !animation: pulse3 1s infinite;
+}
+
+@keyframes pulse1
 {
     0%
     {
@@ -60,5 +75,41 @@
     100%
     {
         transform: scale(2);
+    }
+}
+
+@keyframes pulse2
+{
+    0%
+    {
+        transform: scale(2);
+    }
+    
+    50%
+    {
+        transform: scale(1);
+    }
+
+    100%
+    {
+        transform: scale(2);
+    }
+}
+
+@keyframes pulse3
+{
+    0%
+    {
+        transform: scale(1);
+    }
+
+    50%
+    {
+        transform: scale(0.5);
+    }
+
+    100%
+    {
+        transform: scale(1);
     }
 }
