finding more flex tape

--- a/.github/power.folder/power5.css
+++ b/.github/power.folder/power5.css
@@ -5,6 +5,7 @@
     background-color: blue;
     border-style: solid;
     border-color: rgb(0, 0, 128);
-    padding: 2em;
+    padding: 0.5em;
     text-align: center;
+    font-size: 4em;
 }
