--- a/.github/power.folder/power2.css
+++ b/.github/power.folder/power2.css
@@ -87,22 +87,30 @@
     0%
     {
         transform: scale(2);
+        filter: hue-rotate(0deg);
     }
     
     50%
     {
         transform: scale(1);
+        filter: hue-rotate(280deg);
     }
 
     100%
     {
         transform: scale(2);
+        filter: hue-rotate(0deg);
     }
 }
 
 @keyframes pulse3
 {
     0%
+    {
+        transform: scale(1.5);
+    }
+
+    25%
     {
         transform: scale(1);
     }
@@ -112,8 +120,13 @@
         transform: scale(0.5);
     }
 
-    100%
+    75%
     {
         transform: scale(1);
+    }
+
+    100%
+    {
+        transform: scale(1.5);
     }
 }
