--- a/.github/power.folder/power3.css
+++ b/.github/power.folder/power3.css
@@ -16,6 +16,7 @@
     font-size: 2em;
     text-align: center;
     flex: 1;
+    transition: flex 2s, color 2s, background-color 2s, border-color 2s;
 }
 
 #animate2
@@ -26,6 +27,7 @@
     font-size: 2em;
     text-align: center;
     flex: 1;
+    animation: colors 10s infinite;
 }
 
 #animate3
@@ -42,6 +44,9 @@
 #animate1:hover
 {
     flex: 2;
+    color: rgb(155, 23, 50);
+    background-color: rgb(82, 124, 82);
+    border-color: rgb(77, 7, 67)
 }
 
 #animate2:hover
@@ -52,4 +57,22 @@
 #animate3:hover
 {
     flex: 2;
+}
+
+@keyframes colors
+{
+    0%
+    {
+        filter: hue-rotate(0deg);
+    }
+
+    50%
+    {
+        filter: hue-rotate(500deg);
+    }
+    
+    100%
+    {
+        filter: hue-rotate(0deg);
+    }
 }
