--- a/.github/power.folder/power2.css
+++ b/.github/power.folder/power2.css
@@ -39,6 +39,14 @@
     !animation: pulse3 1s infinite;
 }
 
+#power2-4
+{
+    flex-wrap: wrap;
+    width: 50%;
+    min-height: 80vh;
+    justify-content: space-between;
+}
+
 @keyframes pulse1
 {
     0%
