--- a/.github/power.folder/power3.css
+++ b/.github/power.folder/power3.css
@@ -27,6 +27,7 @@
     font-size: 2em;
     text-align: center;
     flex: 1;
+    transition: flex 2s;
     animation: colors 10s infinite;
 }
 
@@ -38,15 +39,15 @@
     font-size: 2em;
     text-align: center;
     flex: 1;
-
+    transition: flex 2s, color 2s, background-color 2s, border-color 2s;
 }
 
 #animate1:hover
 {
     flex: 2;
-    color: rgb(155, 23, 50);
-    background-color: rgb(82, 124, 82);
-    border-color: rgb(77, 7, 67)
+    color: rgb(100, 0, 0);
+    background-color: rgb(30, 98, 30);
+    border-color: rgb(80, 0, 15)
 }
 
 #animate2:hover
@@ -57,6 +58,9 @@
 #animate3:hover
 {
     flex: 2;
+    color: azure;
+    background-color: rgb(0, 0, 50);
+    border-color: rgb(25, 0, 210);
 }
 
 @keyframes colors
