--- a/.github/power.folder/power2.css
+++ b/.github/power.folder/power2.css
@@ -12,7 +12,7 @@
 {
     width: 50%;
     flex-wrap: wrap;
-    !animation: pulse1 1s infinite;
+    animation: pulse1 1s infinite;
 }
 
 #power2-2
@@ -23,7 +23,7 @@
     justify-content: space-between;
     max-width: 10%;
     padding: 4em;
-    !animation: pulse2 1s infinite;
+    animation: pulse2 1s infinite;
 }
 
 #power2-3
@@ -36,7 +36,7 @@
     justify-content: space-between;
     min-height: 40vh;
     padding: 2em;
-    !animation: pulse3 1s infinite;
+    animation: pulse3 1s infinite;
 }
 
 #power2-4
